--- a/web_admin/comment_w.css
+++ b/web_admin/comment_w.css
@@ -9,7 +9,7 @@
 .com_content{padding:6px 10px}
 .com_reply{background-color:#f9f9f9;margin:0 0 3px 30px;padding:5px 8px}
 .com_reply_body{padding:5px}
-.com_reply_body textarea{width:99%;border-radius:5px;border:1px solid #c8cccf;outline:0;padding:10px;display:block;margin:0 auto;}
+.com_reply_body textarea{width:95%;border-radius:5px;border:1px solid #c8cccf;outline:0;padding:10px;display:block;margin:0 auto;}
 .com_reply_button{display:flex;display:-webkit-flex;justify-content:space-between;flex-wrap:wrap;margin:10px 5px}
 .com_reply_button span{margin:5px 3px}
 .com_reply_body .com_button{padding:5px 10px;background-color:#f0f0f0}
@@ -27,3 +27,4 @@
 .overlay{background-color:rgba(24 23 23 / 0.85);position:fixed;top:0;left:0;width:100%;height:100%;z-index:100;overflow:auto;display:flex;justify-content:center;align-items:center;flex-direction:row}
 .overlayimg{max-height:95%;max-width:95%}
 .com_img{float:left;width:80px;height:80px !important;padding:5px;object-fit:cover;border-radius:10px}
+.info_button{margin-bottom:8px;}
